--- a/public/public_resources/sass/style.css
+++ b/public/public_resources/sass/style.css
@@ -65,7 +65,8 @@ a:hover,
 a:focus {
   text-decoration: none;
   outline: none;
-  color: #ffffff;
+  /*color: #ffffff;*/
+  color: #833030;
 }
 
 ul,
@@ -497,8 +498,8 @@ ol {
   display: inline-block;
   border-radius: 50%;
   position: absolute;
-  top: 0;
-  right: -12px;
+  top: -5px;
+  right: -8px;
 }
 
 .header__cart .header__cart__price {
