--- a/public/public_resources/sass/style.css
+++ b/public/public_resources/sass/style.css
@@ -5,6 +5,9 @@ body {
   height: 100%;
   /*font-family: 'Cairo', sans-serif;*/
   font-family: 'Inter', sans-serif;
+  background-color: #f4f1e0;
+
+  /*previously there was no background color*/
 }
 
 h1,
@@ -19,8 +22,12 @@ h6 {
 }
 
 h1 {
-  font-size: 70px;
+  /*font-size: 70px;*/
+  /*Original font-size*/
+  font-size: 36px;
 }
+
+
 
 h2 {
   font-size: 36px;
@@ -61,13 +68,13 @@ textarea:focus {
   outline: none;
 }
 
-a:hover,
-a:focus {
-  text-decoration: none;
-  outline: none;
-  /*color: #ffffff;*/
-  color: #833030;
-}
+/*a:hover,*/
+/*a:focus {*/
+/*  text-decoration: none;*/
+/*  outline: none;*/
+/*  !*color: #ffffff;*!*/
+/*  color: #833030;*/
+/*}*/
 
 ul,
 ol {
@@ -221,8 +228,16 @@ ol {
 }
 
 /* Header top part */
+.header {
+  position: relative;
+
+  z-index: 9999;
+}
 .header__top {
-  background: #f5f5f5;
+  /*background: #f5f5f5; original background*/
+  background-color:   #ff6429;
+
+
 }
 
 /* Left side of header */
@@ -371,26 +386,40 @@ ol {
   display: block;
   font-size: 14px;
   color: #1c1c1c;
-}
 
+}
+.test {
+  color: rgba(85, 85, 85, 0.8);
+}
 .header__top__right__auth a i {
   margin-right: 6px;
 }
 
 /* Header bottom part */
+.header-bottom {
+  /*position: fixed;*/
+  background-color: transparent;
+  color: #f4f1e0;
+  position: absolute;
+  z-index: 9999;
+}
+
 .header__logo {
-  padding: 15px 0;
+  padding: 30px 0;
+  text-align: center;
 }
 
 .header__logo a {
   display: inline-block;
+
 }
 
 .header__menu {
-  padding: 24px 0;
+  /*padding: 24px 0;*/
 }
 
 .header__menu ul li {
+  font-family: 'Lora', serif;
   list-style: none;
   display: inline-block;
   margin-right: 50px;
@@ -459,12 +488,12 @@ ol {
 
 .header__cart {
   text-align: right;
-  padding: 24px 0;
+
 }
 
 .header__cart ul {
   display: inline-block;
-  margin-right: 25px;
+  /*margin-right: 25px;*/
 }
 
 .header__cart ul li {
@@ -486,21 +515,21 @@ ol {
   color: #1c1c1c;
 }
 
-.header__cart ul li a span {
-  height: 13px;
-  width: 13px;
-  background: #833030;
-  font-size: 10px;
-  color: #ffffff;
-  line-height: 13px;
-  text-align: center;
-  font-weight: 700;
-  display: inline-block;
-  border-radius: 50%;
-  position: absolute;
-  top: -5px;
-  right: -8px;
-}
+/*.header__cart ul li a span {*/
+/*  height: 13px;*/
+/*  width: 13px;*/
+/*  background: #833030;*/
+/*  font-size: 10px;*/
+/*  color: #ffffff;*/
+/*  line-height: 13px;*/
+/*  text-align: center;*/
+/*  font-weight: 700;*/
+/*  display: inline-block;*/
+/*  border-radius: 50%;*/
+/*  position: absolute;*/
+/*  top: -5px;*/
+/*  right: -8px;*/
+/*}*/
 
 .header__cart .header__cart__price {
   font-size: 14px;
@@ -525,6 +554,7 @@ ol {
 /* Hero */
 .hero {
   padding-bottom: 50px;
+  transition: all 0.3s;
 }
 
 .hero.hero-normal {
@@ -3107,15 +3137,15 @@ ol {
   .hamburger__menu__overlay.active {
     visibility: visible;
   }
-  .header__top {
-    display: none;
-  }
-  .header__menu {
-    display: none;
-  }
+  /*.header__top {*/
+  /*  display: none;*/
+  /*}*/
+  /*.header__menu {*/
+  /*  display: none;*/
+  /*}*/
   .header__cart {
     text-align: center;
-    padding: 10px 0 24px;
+    /*padding: 10px 0 24px;*/
   }
   .over_hid {
     overflow: hidden;
@@ -3357,15 +3387,15 @@ ol {
   .hamburger__menu__overlay.active {
     visibility: visible;
   }
-  .header__top {
-    display: none;
-  }
-  .header__menu {
-    display: none;
-  }
+  /*.header__top {*/
+  /*  display: none;*/
+  /*}*/
+  /*.header__menu {*/
+  /*  display: none;*/
+  /*}menu*/
   .header__cart {
     text-align: center;
-    padding: 10px 0 24px;
+    /*padding: 10px 0 24px;*/
   }
   .over_hid {
     overflow: hidden;
