--- a/public/public_resources/sass/style.css
+++ b/public/public_resources/sass/style.css
@@ -2,7 +2,7 @@
 /* Default CSS */
 html,
 body {
-  height: 100%;
+  /*height: 100%;*/
   /*font-family: 'Cairo', sans-serif;*/
   font-family: 'Inter', sans-serif;
   background-color: #f4f1e0;
@@ -50,11 +50,11 @@ h6 {
 }
 
 p {
-  font-size: 16px;
-  color: #6f6f6f;
-  font-weight: 400;
-  line-height: 26px;
-  margin: 0 0 15px 0;
+  /*font-size: 16px;*/
+  /*color: #6f6f6f;*/
+  /*font-weight: 400;*/
+  /*line-height: 26px;*/
+  /*margin: 0 0 15px 0;*/
 }
 
 img {
