Added auto logout when user is idling. And set log out whenever CartContext can't get user's data.
Before resizing images.

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,26 @@ code {
 /*  !*-webkit-transform: translateY(-35px);*!*/
 /*  background: #ffffff;*/
 /*}*/
+/*@keyframes shake {*/
+/*    from {*/
+/*        transform: translateY(-12px);*/
+/*    }*/
+/*    to {*/
+/*        transform: translateY(12px);*/
+/*    }*/
+/*}*/
 
+/*#facebook-profile-icon-animation-desktop {*/
+/*    position: absolute;*/
+/*    animation-name: shake;*/
+/*    animation-duration: 4s;*/
+/*    animation-iteration-count: infinite;*/
+/*}*/
+/*#facebook-profile-icon-animation-mobile {*/
+/*    position: absolute;*/
+/*    animation-name: shake;*/
+/*    animation-duration: 4s;*/
+/*    animation-iteration-count: infinite;*/
+/*}*/
 
 
